# NewGLDAB-by-Arduino

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  platformio.ini
.github/workflows/: build-and-test.yml
docs/: README.md  SUMMARY.md
docs/algorithms/: Machine_Learning_Algorithms.md
docs/formal-verification/: GLDAB_Constraints.smt2  GLDAB_System.cfg  GLDAB_System.tla
docs/mathematics/: Quaternion_Mathematics.md
docs/research/: COMPREHENSIVE_RESEARCH_REPORT.md  Implementation_Roadmap.md
docs/sensors/: Sensor_Integration_Guide.md
